# server/routes/task.router.js
@@ -12,6 +12,7 @@ taskRouter.get(
 	taskController.getAllTasks,
 	// #swagger.tags = ['Задачи']
 	// #swagger.summary = 'Получить все задачи'
+    // #swagger.security = [{ "bearerAuth": [] }]
 );
 
 taskRouter.get(
@@ -20,6 +21,7 @@ taskRouter.get(
 	taskController.getTaskById,
 	// #swagger.tags = ['Задачи']
 	// #swagger.summary = 'Получить задачу по ID'
+    // #swagger.security = [{ "bearerAuth": [] }]
 );
 
 taskRouter.post(
@@ -28,6 +30,7 @@ taskRouter.post(
 	taskController.createTask,
 	// #swagger.tags = ['Задачи']
 	// #swagger.summary = 'Создать задачу'
+    // #swagger.security = [{ "bearerAuth": [] }]
 );
 
 taskRouter.patch(
@@ -36,6 +39,7 @@ taskRouter.patch(
 	taskController.updateTaskById,
 	// #swagger.tags = ['Задачи']
 	// #swagger.summary = 'Редактировать задачу'
+    // #swagger.security = [{ "bearerAuth": [] }]
 );
 
 export default taskRouter;
